# TestPythonBot

./: .dockerignore  .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: start.sh
src/: main.py  routes.py
src/core/: config.py  paths.py
src/db/: db_redis.py
src/models/: currencies.py
src/services/: xml_parser.py
